<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lato"
            android:text="@string/adivinha_a"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSubTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/eu_escolhi_um_n_mero_entre_0_e_15_tente_adivinhar_qual"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/digite_o_n_mero"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/textTentativasRestantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tentativas_restantes_3" />

        <Button
            android:id="@+id/buttonVerificar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:onClick="Verificar"
            android:text="@string/verificar" />

        <Button
            android:id="@+id/buttonReiniciar"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginTop="25dp"
            android:onClick="Reiniciar"
            android:text="Reiniciar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>