<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ganhou">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/parab_ms_voc_acertou_com_2_tentativas"
            android:textAlignment="center"
            android:textColor="#EF6C00"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageWinner"
            android:layout_width="match_parent"
            android:layout_height="463dp"
            android:contentDescription="@string/winner"
            android:visibility="visible"
            app:srcCompat="@drawable/success"
            tools:visibility="visible" />

        <Button
            android:id="@+id/buttonVoltar"
            android:layout_width="386dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:onClick="Voltar"
            android:text="@string/btnVoltarResultado" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>